feat: Improve camera initialization with security checks, multiple device fallbacks, and enhanced error messages.

--- a/index.html
+++ b/index.html
@@ -1815,46 +1815,67 @@
 
         async function startCamera() {
             if (isLive) { stopCamera(); return; }
-            if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
-                alert('Camera not supported. Please use HTTPS or localhost.');
+
+            // Security Check
+            if (!window.isSecureContext && window.location.hostname !== 'localhost') {
+                alert('⚠️ Camera access requires HTTPS or Localhost.\nYou are currently on an insecure connection.');
                 return;
             }
+
+            if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+                alert('Camera API not supported in this browser.');
+                return;
+            }
+
             try {
                 console.log('Requesting camera access...');
-                let stream;
-                try {
-                    stream = await navigator.mediaDevices.getUserMedia({
-                        video: {
-                            facingMode: 'environment',
-                            width: { ideal: 640 },
-                            height: { ideal: 480 }
-                        }
-                    });
-                } catch (e) {
-                    console.log('Rear camera failed, trying front camera...');
-                    stream = await navigator.mediaDevices.getUserMedia({
-                        video: {
-                            width: { ideal: 640 },
-                            height: { ideal: 480 }
-                        }
-                    });
+                let stream = null;
+
+                // unique fallback chain
+                const constraints = [
+                    { video: { facingMode: 'environment', width: { ideal: 640 }, height: { ideal: 480 } } }, // 1. Back camera
+                    { video: { facingMode: 'user', width: { ideal: 640 }, height: { ideal: 480 } } },        // 2. Front camera
+                    { video: true }                                                                          // 3. Any camera
+                ];
+
+                for (let constraint of constraints) {
+                    try {
+                        stream = await navigator.mediaDevices.getUserMedia(constraint);
+                        if (stream) break; // Success
+                    } catch (e) {
+                        console.warn('Camera constraint failed:', constraint, e);
+                    }
                 }
+
+                if (!stream) {
+                    throw new Error("Could not find any working camera device.");
+                }
+
                 console.log('Got stream:', stream);
                 cameraFeed.srcObject = stream;
+
+                // Ensure video plays (some browsers require explicit interact or promise handling)
+                try {
+                    await cameraFeed.play();
+                } catch (playErr) {
+                    console.log("Autoplay blocked, attempting to play on metadata load");
+                }
+
                 cameraFeed.addEventListener('playing', function onPlaying() {
                     cameraFeed.removeEventListener('playing', onPlaying);
                     console.log('Video playing, width:', cameraFeed.videoWidth);
                     isLive = true;
-                    cameraFeed.playsInline = true;
+                    // cameraFeed.playsInline = true; // Set in HTML already
                     cameraTrigger.textContent = '❌ Stop Camera';
                     cameraTrigger.classList.add('active');
                     previewWrapper.style.display = 'block';
                     controls.style.display = 'flex';
                     requestAnimationFrame(processCameraFrame);
                 });
-                cameraFeed.play();
+
             } catch (err) {
-                alert('Camera access denied or not available: ' + err.message);
+                console.error(err);
+                alert('Camera Error: ' + err.message + '\n\nCheck permissions and try HTTPS.');
             }
         }
 
