--- a/index.html
+++ b/index.html
@@ -1832,6 +1832,23 @@
                         data[i + 1] = Math.floor(data[i + 1] / (threshold / 2 + 1)) * (threshold / 2 + 1);
                         data[i + 2] = Math.floor(data[i + 2] / (threshold / 2 + 1)) * (threshold / 2 + 1);
                     }
+                } else if (currentFilter === 'matrix') {
+                    for (let i = 0; i < data.length; i += 4) {
+                        const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                        if (avg < threshold - 40) {
+                            // Darkest
+                            data[i] = 0; data[i + 1] = 10; data[i + 2] = 0;
+                        } else if (avg < threshold) {
+                            // Dark Green
+                            data[i] = 0; data[i + 1] = 80; data[i + 2] = 10;
+                        } else if (avg < threshold + 40) {
+                            // Matrix Green
+                            data[i] = 0; data[i + 1] = 180; data[i + 2] = 30;
+                        } else {
+                            // Brightest
+                            data[i] = 180; data[i + 1] = 255; data[i + 2] = 180;
+                        }
+                    }
                 } else if (currentFilter === 'data') {
                     const fontSize = currentDensity;
                     ctx.font = `bold ${fontSize}px monospace`;
@@ -1864,6 +1881,8 @@
                     }
                     return;
                 }
+
+                ctx.putImageData(imageData, 0, 0);
 
             } catch (e) {
                 console.error("Error in processImage:", e);
