--- a/index.html
+++ b/index.html
@@ -1751,105 +1751,24 @@
                 const source = isLive ? cameraFeed : originalImage;
 
                 // Robust width/height detection
-                const w = source.videoWidth || source.naturalWidth || source.width;
-                const h = source.videoHeight || source.naturalHeight || source.height;
+                const srcW = source.videoWidth || source.naturalWidth || source.width;
+                const srcH = source.videoHeight || source.naturalHeight || source.height;
 
-                if (!w || !h || w === 0 || h === 0) {
-                    console.warn("Source has invalid dimensions:", w, h);
+                if (!srcW || !srcH || srcW === 0 || srcH === 0) {
+                    console.warn("Source has invalid dimensions:", srcW, srcH);
                     return;
                 }
 
-                canvas.width = w;
-                canvas.height = h;
-                ctx.drawImage(source, 0, 0);
+                // DATA FILTER: Native resolution, font-based density
+                if (currentFilter === 'data') {
+                    canvas.width = srcW;
+                    canvas.height = srcH;
+                    ctx.drawImage(source, 0, 0);
 
-                const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-                const data = imageData.data;
-                const threshold = parseInt(thresholdSlider.value);
+                    const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+                    const data = imageData.data;
+                    const threshold = parseInt(thresholdSlider.value);
 
-                if (currentFilter === 'binary') {
-                    const useDither = ditherCheck.checked;
-
-                    // If dithering is enabled, we need to work on a copy of the grayscale data to propagate errors correctly
-                    // Create a 2D array for easier error prop
-                    let gray = new Float32Array(canvas.width * canvas.height);
-
-                    // 1. Grayscale Pass
-                    for (let i = 0; i < data.length; i += 4) {
-                        gray[i / 4] = (data[i] + data[i + 1] + data[i + 2]) / 3;
-                    }
-
-                    // 2. Dithering Pass (Floyd-Steinberg)
-                    // Error diffusion:
-                    //     X   7
-                    // 3   5   1
-                    // ( / 16 )
-
-                    const w = canvas.width;
-                    const h = canvas.height;
-
-                    for (let y = 0; y < h; y++) {
-                        for (let x = 0; x < w; x++) {
-                            if (useDither) {
-                                const idx = y * w + x;
-                                const oldPixel = gray[idx];
-                                const newPixel = oldPixel < threshold ? 0 : 255;
-                                gray[idx] = newPixel;
-
-                                const quantError = oldPixel - newPixel;
-
-                                if (x + 1 < w) gray[y * w + (x + 1)] += quantError * 7 / 16;
-                                if (x - 1 >= 0 && y + 1 < h) gray[(y + 1) * w + (x - 1)] += quantError * 3 / 16;
-                                if (y + 1 < h) gray[(y + 1) * w + x] += quantError * 5 / 16;
-                                if (x + 1 < w && y + 1 < h) gray[(y + 1) * w + (x + 1)] += quantError * 1 / 16;
-                            } else {
-                                // Simple Threshold
-                                const idx = y * w + x;
-                                gray[idx] = gray[idx] >= threshold ? 255 : 0;
-                            }
-                        }
-                    }
-
-                    // 3. Coloring Pass
-                    const rVal = parseInt(activePrimary.slice(1, 3), 16);
-                    const gVal = parseInt(activePrimary.slice(3, 5), 16);
-                    const bVal = parseInt(activePrimary.slice(5, 7), 16);
-
-                    for (let i = 0; i < data.length; i += 4) {
-                        const val = gray[i / 4];
-                        // Normalize 0-255 to 0-1 for coloring
-                        const norm = val / 255;
-                        data[i] = rVal * norm;
-                        data[i + 1] = gVal * norm;
-                        data[i + 2] = bVal * norm;
-                    }
-                } else if (currentFilter === 'pixel') {
-                    // Pixelate is handled differently, usually by scaling down and up
-                    // But for simplicity in this loop we'll do a basic "posterize" feel
-                    const blockSize = Math.max(1, Math.floor((255 - threshold) / 10));
-                    for (let i = 0; i < data.length; i += 4) {
-                        data[i] = Math.floor(data[i] / (threshold / 2 + 1)) * (threshold / 2 + 1);
-                        data[i + 1] = Math.floor(data[i + 1] / (threshold / 2 + 1)) * (threshold / 2 + 1);
-                        data[i + 2] = Math.floor(data[i + 2] / (threshold / 2 + 1)) * (threshold / 2 + 1);
-                    }
-                } else if (currentFilter === 'matrix') {
-                    for (let i = 0; i < data.length; i += 4) {
-                        const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
-                        if (avg < threshold - 40) {
-                            // Darkest
-                            data[i] = 0; data[i + 1] = 10; data[i + 2] = 0;
-                        } else if (avg < threshold) {
-                            // Dark Green
-                            data[i] = 0; data[i + 1] = 80; data[i + 2] = 10;
-                        } else if (avg < threshold + 40) {
-                            // Matrix Green
-                            data[i] = 0; data[i + 1] = 180; data[i + 2] = 30;
-                        } else {
-                            // Brightest
-                            data[i] = 180; data[i + 1] = 255; data[i + 2] = 180;
-                        }
-                    }
-                } else if (currentFilter === 'data') {
                     const fontSize = currentDensity;
                     ctx.font = `bold ${fontSize}px monospace`;
                     ctx.textBaseline = 'top';
@@ -1858,8 +1777,7 @@
                     ctx.fillStyle = activePrimary;
 
                     const useAscii = asciiCheck.checked;
-                    // Standard ASCII ramp from dark to light
-                    const asciiChars = " .:-=+*#%@"; // 10 chars
+                    const asciiChars = " .:-=+*#%@";
 
                     for (let y = 0; y < canvas.height; y += fontSize) {
                         for (let x = 0; x < canvas.width; x += fontSize) {
@@ -1869,24 +1787,105 @@
 
                             let char = '';
                             if (useAscii) {
-                                // Map 0-255 to 0-9
                                 const charIdx = Math.floor(avg / 25.5);
                                 char = asciiChars[Math.min(charIdx, asciiChars.length - 1)];
                             } else {
                                 char = avg >= threshold ? '1' : '0';
                             }
-
                             ctx.fillText(char, x, y);
                         }
                     }
                     return;
                 }
 
+                // IMAGE FILTERS: Canvas scaling based on density
+                // Ultra (4) -> Smallest pixels (Highest res in this set). Low (20) -> Biggest pixels.
+                const scaleFactor = Math.max(1, currentDensity);
+                const targetW = Math.max(1, Math.floor(srcW / scaleFactor));
+                const targetH = Math.max(1, Math.floor(srcH / scaleFactor));
+
+                canvas.width = targetW;
+                canvas.height = targetH;
+
+                // Draw source scaled down
+                ctx.drawImage(source, 0, 0, targetW, targetH);
+
+                const imageData = ctx.getImageData(0, 0, targetW, targetH);
+                const data = imageData.data;
+                const threshold = parseInt(thresholdSlider.value);
+
+                if (currentFilter === 'binary') {
+                    const useDither = ditherCheck.checked;
+                    let gray = new Float32Array(targetW * targetH);
+
+                    // 1. Grayscale
+                    for (let i = 0; i < data.length; i += 4) {
+                        gray[i / 4] = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                    }
+
+                    // 2. Dithering
+                    for (let y = 0; y < targetH; y++) {
+                        for (let x = 0; x < targetW; x++) {
+                            const idx = y * targetW + x;
+                            if (useDither) {
+                                const oldPixel = gray[idx];
+                                const newPixel = oldPixel < threshold ? 0 : 255;
+                                gray[idx] = newPixel;
+                                const quantError = oldPixel - newPixel;
+
+                                if (x + 1 < targetW) gray[y * targetW + (x + 1)] += quantError * 7 / 16;
+                                if (x - 1 >= 0 && y + 1 < targetH) gray[(y + 1) * targetW + (x - 1)] += quantError * 3 / 16;
+                                if (y + 1 < targetH) gray[(y + 1) * targetW + x] += quantError * 5 / 16;
+                                if (x + 1 < targetW && y + 1 < targetH) gray[(y + 1) * targetW + (x + 1)] += quantError * 1 / 16;
+                            } else {
+                                gray[idx] = gray[idx] >= threshold ? 255 : 0;
+                            }
+                        }
+                    }
+
+                    // 3. Coloring
+                    const rVal = parseInt(activePrimary.slice(1, 3), 16);
+                    const gVal = parseInt(activePrimary.slice(3, 5), 16);
+                    const bVal = parseInt(activePrimary.slice(5, 7), 16);
+
+                    for (let i = 0; i < data.length; i += 4) {
+                        const val = gray[i / 4];
+                        const norm = val / 255;
+                        data[i] = rVal * norm;
+                        data[i + 1] = gVal * norm;
+                        data[i + 2] = bVal * norm;
+                    }
+
+                } else if (currentFilter === 'pixel') {
+                    // Color Quantization (Posterize)
+                    // The spatial pixelation is handled by the canvas scaling now.
+                    for (let i = 0; i < data.length; i += 4) {
+                        const step = Math.max(1, threshold / 2 + 1);
+                        data[i] = Math.floor(data[i] / step) * step;
+                        data[i + 1] = Math.floor(data[i + 1] / step) * step;
+                        data[i + 2] = Math.floor(data[i + 2] / step) * step;
+                    }
+
+                } else if (currentFilter === 'matrix') {
+                    // 4-Level Green Quantization
+                    for (let i = 0; i < data.length; i += 4) {
+                        const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                        if (avg < threshold - 40) {
+                            data[i] = 0; data[i + 1] = 10; data[i + 2] = 0; // Blackest
+                        } else if (avg < threshold) {
+                            data[i] = 0; data[i + 1] = 80; data[i + 2] = 10; // Dark
+                        } else if (avg < threshold + 40) {
+                            data[i] = 0; data[i + 1] = 180; data[i + 2] = 30; // Mid
+                        } else {
+                            data[i] = 180; data[i + 1] = 255; data[i + 2] = 180; // Bright
+                        }
+                    }
+                }
+
                 ctx.putImageData(imageData, 0, 0);
 
             } catch (e) {
                 console.error("Error in processImage:", e);
-                // Optional: alert user or show error state on canvas
             }
         }
 
