--- a/index.html
+++ b/index.html
@@ -1783,7 +1783,7 @@
                         for (let x = 0; x < canvas.width; x += fontSize) {
                             const i = (Math.floor(y) * canvas.width + Math.floor(x)) * 4;
                             const r = data[i]; const g = data[i + 1]; const b = data[i + 2];
-                            const avg = (r + g + b) / 3;
+                            const avg = 0.299 * r + 0.587 * g + 0.114 * b;
 
                             let char = '';
                             if (useAscii) {
@@ -1818,9 +1818,8 @@
                     const useDither = ditherCheck.checked;
                     let gray = new Float32Array(targetW * targetH);
 
-                    // 1. Grayscale
                     for (let i = 0; i < data.length; i += 4) {
-                        gray[i / 4] = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                        gray[i / 4] = 0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2];
                     }
 
                     // 2. Dithering
@@ -1873,7 +1872,7 @@
 
                     // 1. Grayscale
                     for (let i = 0; i < data.length; i += 4) {
-                        gray[i / 4] = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                        gray[i / 4] = 0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2];
                     }
 
                     // 2. Dither + Quantize
@@ -2226,7 +2225,7 @@
                 for (let x = 0; x < w; x += gridSize) {
                     const i = (Math.floor(y) * w + Math.floor(x)) * 4;
                     // Calculate luminance
-                    const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                    const avg = 0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2];
                     output += avg >= threshold ? '1' : '0';
                 }
                 output += '\n';
