--- a/index.html
+++ b/index.html
@@ -1914,16 +1914,31 @@
                     }
 
                     // 3. Color Mapping
+                    const rVal = parseInt(activePrimary.slice(1, 3), 16);
+                    const gVal = parseInt(activePrimary.slice(3, 5), 16);
+                    const bVal = parseInt(activePrimary.slice(5, 7), 16);
+
                     for (let i = 0; i < data.length; i += 4) {
                         const val = gray[i / 4];
                         if (val <= 0) {
-                            data[i] = 0; data[i + 1] = 10; data[i + 2] = 0; // Blackest
+                            // Level 0: Black
+                            data[i] = 0; data[i + 1] = 0; data[i + 2] = 0;
                         } else if (val <= 85) {
-                            data[i] = 0; data[i + 1] = 80; data[i + 2] = 10; // Dark
+                            // Level 1: Dark (30% intensity)
+                            data[i] = rVal * 0.3;
+                            data[i + 1] = gVal * 0.3;
+                            data[i + 2] = bVal * 0.3;
                         } else if (val <= 170) {
-                            data[i] = 0; data[i + 1] = 180; data[i + 2] = 30; // Mid
+                            // Level 2: Mid (70% intensity)
+                            data[i] = rVal * 0.7;
+                            data[i + 1] = gVal * 0.7;
+                            data[i + 2] = bVal * 0.7;
                         } else {
-                            data[i] = 180; data[i + 1] = 255; data[i + 2] = 180; // Bright
+                            // Level 3: Bright (100% intensity mixed with white for highlight)
+                            // Mix 20% white, 80% color to simulate phosphor bloom
+                            data[i] = rVal + (255 - rVal) * 0.2;
+                            data[i + 1] = gVal + (255 - gVal) * 0.2;
+                            data[i + 2] = bVal + (255 - bVal) * 0.2;
                         }
                         data[i + 3] = 255; // Force Alpha Opaque
                     }
